Add brightness slider styles [2/4]
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/values/cr_arrays.xml
+++ b/res/values/cr_arrays.xml
@@ -2345,7 +2345,7 @@
 
     <!-- Navbar styles -->
     <string-array name="navbar_style_entries" translatable="false">
-        <item>@string/navbar_default</item>
+        <item>@string/navbar_stock</item>
         <item>@string/navbar_asus</item>
         <item>@string/navbar_oneplus</item>
         <item>@string/navbar_oneui</item>
@@ -2358,5 +2358,24 @@
         <item>2</item>
         <item>3</item>
         <item>4</item>
+    </string-array>
+
+    <!-- Brightness slider styles -->
+    <string-array name="brightness_slider_style_entries" translatable="false">
+        <item>@string/brightness_slider_style_stock</item>
+        <item>@string/brightness_slider_style_daniel</item>
+        <item>@string/brightness_slider_style_mememini</item>
+        <item>@string/brightness_slider_style_memeround</item>
+        <item>@string/brightness_slider_style_memeroundstroke</item>
+        <item>@string/brightness_slider_style_memestroke</item>
+    </string-array>
+
+    <string-array name="brightness_slider_style_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
     </string-array>
 </resources>
