--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -2594,9 +2594,18 @@
 
     <!-- Navbar styles -->
     <string name="navbar_style_title">Navbar style</string>
-    <string name="navbar_default">Default</string>
+    <string name="navbar_stock">Stock</string>
     <string name="navbar_asus">ASUS</string>
     <string name="navbar_oneplus">OnePlus</string>
     <string name="navbar_oneui">One UI</string>
     <string name="navbar_tecno">Tecno Camon</string>
+
+    <!-- Brightness Slider styles -->
+    <string name="brightness_slider_style_title">Brightness slider style</string>
+    <string name="brightness_slider_style_stock">Stock</string>
+    <string name="brightness_slider_style_daniel">Daniel</string>
+    <string name="brightness_slider_style_mememini">Meme mini</string>
+    <string name="brightness_slider_style_memeround">Meme round</string>
+    <string name="brightness_slider_style_memeroundstroke">Meme round stroke</string>
+    <string name="brightness_slider_style_memestroke">Meme stroke</string>
 </resources>
