--- a/res/xml/crdroid_settings_ui.xml
+++ b/res/xml/crdroid_settings_ui.xml
@@ -43,6 +43,16 @@
         android:summary="@string/settings_blur_cat_summary"
         android:fragment="com.crdroid.settings.fragments.ui.BlurPersonalizations" /> -->
 
+    <!-- Brightness Slider Style -->
+    <com.crdroid.settings.preferences.SystemSettingListPreference
+        android:key="brightness_slider_style"
+        android:icon="@drawable/ic_brightness"
+        android:title="@string/brightness_slider_style_title"
+        android:dialogTitle="@string/brightness_slider_style_title"
+        android:entries="@array/brightness_slider_style_entries"
+        android:entryValues="@array/brightness_slider_style_values"
+        android:defaultValue="0" />
+
     <!-- Display cutout options -->
     <Preference
         android:key="cutout_settings"
